its me attempt two

--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <html>
 <head>
 	<title>Jeremy Andersen</title>
-</head>
+		</head>
+		  <header><h1><Strong>Boom</Strong> <h2>shock-a-locka</h2></h1></header>
 
-<body>
-<h1>Its me</h1>
+			<body>
+			  <h3>Its me</h3>
+			    <p>Spicy jalapeno bacon ipsum dolor amet fugiat ribeye est sausage aliquip chuck prosciutto et irure. Nostrud ball tip frankfurter prosciutto burgdoggen et cillum quis. Biltong cupidatat shoulder, exercitation pork chop incididunt salami quis. Dolore excepteur short ribs in. Cillum alcatra laborum qui shoulder nulla turducken labore in tenderloin rump kevin. Esse ham tongue brisket. Spare ribs chuck dolore anim, est leberkas andouille biltong tongue in quis meatloaf bacon ut brisket.</p>
+			    
+			    <p>Reprehenderit culpa meatball id minim excepteur pork loin cupidatat quis. Commodo cow porchetta short loin drumstick ipsum prosciutto ribeye kielbasa labore turkey, andouille enim. Chicken reprehenderit lorem nulla laboris magna quis pork loin shank swine excepteur esse biltong. Veniam fatback pork officia, pork loin landjaeger in ham hock.</p>
+
+			    <P>Cillum sunt ea drumstick pancetta ipsum pastrami sausage enim magna commodo exercitation. Chuck ut duis officia, cupidatat t-bone pariatur esse. Velit deserunt laborum, officia meatloaf culpa nulla exercitation beef pig in duis porchetta jerky capicola. Quis ham frankfurter, ad drumstick flank velit chicken. Enim alcatra occaecat ut beef ribs sed landjaeger beef shank kielbasa picanha quis.</P>
+
+
+
+
+
+
+
+
 </body>
+
 </html>
